--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
           <h2> New Books</h2>
         </div>
         <article> 
-          <img src="/img/hp1.jpg" />
-          <div class="article-content">
+          <img src="/img/book/hp1.jpg" />          <div class="article-content">
             <h2>Microsoft Edge</h2>
               <p>
                 Microsoft Edge is a web browser developed by Microsoft, released in
@@ -97,8 +96,7 @@
         </article>
 
         <article>
-          <img src="/img/hp1.jpg" />
-          <div class="article-content">
+          <img src="/img/book/hp1.jpg" />          <div class="article-content">
               <h2>Microsoft Edge</h2>
               <p>
                 Microsoft Edge is a web browser developed by Microsoft, released in
@@ -109,7 +107,7 @@
 
         <article>
         
-          <img src="/img/hp1.jpg" />
+          <img src="/img/book/hp1.jpg" />
           <div class="article-content">
             <h2>Microsoft Edge</h2>
             <p>
