--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="topnav" class="topnav">
       <a href="/index.html" class="active">Home</a>
       <!-- selected nav bar -->
-      <a href="/html/stats.html">Stats</a>
+      <a href="/html/shop.html">Shop</a>
       <a href="/html/contact.html">Contact Us</a>
       <a href="/html/login.html">Login</a>
       <!-- searchbutton-->
