--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/style-mobile.css" />
+    <link rel="stylesheet" href="/css/mobile.css" />
     <link rel="stylesheet" href="/css/carosel.css" />
   </head>
   <body class="body">
@@ -127,9 +127,9 @@
                 in 2015. Microsoft Edge replaced Internet Explorer.
               </p>
             </div>
-          </article>         
+          </article>
         </div>
-         <!-- ************************END ARTICLE************************* -->
+        <!-- ************************END ARTICLE************************* -->
         <!-- ++++++++++++++++++++++++++GENRE+++++++++++++++++++++++++-->
         <div id="genre">
           <div class="main-section-heading">SEARCH BY GENRE</div>
