--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/mobile.css" />
     <link rel="stylesheet" href="/css/carosel.css" />
+    <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body class="body">
     <!-- create a logo area in header -->
