--- a/html/contact.html
+++ b/html/contact.html
@@ -24,7 +24,9 @@
     <div class="contact-page">
       <!-- <img src="/img/other/shop.jpg" class="bannerIMG" alt="shop"> -->
 
-      <div class="main-section-heading">About Us</div>
+      <div class="main-section-heading">
+        <iconify-icon inline icon="mdi:about"></iconify-icon>About Us
+      </div>
       <div class="ContactSECT">
         <img src="/img/other/shop.jpg" alt="Shop" /><br />
 
@@ -35,7 +37,10 @@
         voluptate quae voluptatem quibusdam voluptatum quos quas quidem
         nesciunt. Quisquam, quae. Quisquam
       </div>
-      <div class="main-section-heading">Contact US</div>
+      <div class="main-section-heading">
+        <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon
+        >Contact US
+      </div>
       <div class="ContactSECT ContactForm">
         <form>
           <label for="fname">First Name</label>
@@ -72,19 +77,76 @@
           <input type="submit" value="Submit" />
         </form>
         <div class="contactInfo">
-          <iconify-icon inline icon="material-symbols:call"></iconify-icon>+34
+          <iconify-icon inline icon="material-symbols:call"></iconify-icon> +34
           324 324 324 <br />
           <iconify-icon inline icon="mdi:email"></iconify-icon>
           info@bookshop.com <br />
           <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de Lleida,
           25, 08500 Vic, Barcelona<br />
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5287.5175996663875!2d2.27509498511035!3d41.94618966276908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcc2ce5db89d5f992!2sGLA%20SL!5e0!3m2!1sen!2ses!4v1671710875691!5m2!1sen!2ses"   allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5287.5175996663875!2d2.27509498511035!3d41.94618966276908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcc2ce5db89d5f992!2sGLA%20SL!5e0!3m2!1sen!2ses!4v1671710875691!5m2!1sen!2ses"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
-          <div class="social-media">Follow US <br />
+          <div class="social-media">
+            Follow US <br />
             <iconify-icon icon="mdi:twitter"></iconify-icon>
             <iconify-icon icon="mdi:facebook"></iconify-icon>
             <iconify-icon icon="mdi:instagram"></iconify-icon>
-            <iconify-icon icon="mdi:reddit"></iconify-icon>
+            <a href="http://old.reddit.com">
+              <iconify-icon icon="mdi:reddit"></iconify-icon
+            ></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="main-section-heading">
+        <iconify-icon inline icon="wpf:faq"></iconify-icon> FAQ
+      </div>
+
+      <div class="faq">
+        <div class="tab">
+          <input type="checkbox" id="chck1" />
+          <label class="tab-label" for="chck1">Item 1</label>
+          <div class="tab-content">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum,
+            reiciendis!
+          </div>
+        </div>
+        <div class="tab">
+          <input type="checkbox" id="chck2" />
+          <label class="tab-label" for="chck2">Item 2</label>
+          <div class="tab-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+          </div>
+        </div>
+        <div class="tab">
+          <input type="checkbox" id="chck3" />
+          <label class="tab-label" for="chck3">Item 3</label>
+          <div class="tab-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+          </div>
+        </div>
+        <div class="tab">
+          <input type="checkbox" id="chck4" />
+          <label class="tab-label" for="chck4">Item 4</label>
+          <div class="tab-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+          </div>
+        </div>
+        <div class="tab">
+          <input type="checkbox" id="chck5" />
+          <label class="tab-label" for="chck5">Item 5</label>
+          <div class="tab-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+          </div>
+        </div>
+        <div class="tab">
+          <input type="checkbox" id="chck6" />
+          <label class="tab-label" for="chck6">Item 6</label>
+          <div class="tab-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
           </div>
         </div>
       </div>
