--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/mobile.css" />
     <link rel="stylesheet" href="/css/carosel.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0"
+    />
   </head>
   <body class="body">
     <!-- create a logo area in header -->
     <img src="/img/logo.png" class="logo" alt="image" />
     <!-- create a logo area in header -->
     <div id="topnav" class="topnav">
-      <a href="/index.html" class="active">Home</a>
+      <a href="/index.html" class="active">   <iconify-icon inline icon="mdi:home"></iconify-icon> Home</a>
       <!-- selected nav bar -->
-      <a href="/html/shop.html">Shop</a>
-      <a href="/html/contact.html">Contact Us</a>
-      <a href="/html/login.html">Login</a>
+      <a href="/html/shop.html"><iconify-icon inline icon="mdi:shop"></iconify-icon> Shop</a>
+      <a href="/html/contact.html"> <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon
+        > Contact Us</a>
+      <a href="/html/login.html"><iconify-icon inline icon="material-symbols:login"></iconify-icon> Login</a>
       <!-- searchbutton-->
     </div>
     <!-- ++++++++++++++++++++++++CONTENT++++++++++++++++++++++++++++ -->
@@ -96,7 +100,10 @@
         </div>
         <!-- ++++++++++++++++++++++++++MAIN ARTICLES+++++++++++++++++++++++++-->
         <div class="articles">
-          <div class="main-section-heading">New Books</div>
+          <div class="main-section-heading">
+            <iconify-icon inline icon="ph:books-bold"></iconify-icon> New Books
+          </div>
+         
           <article>
             <img src="/img/book/hp1.jpg" alt="image" />
             <div class="article-content">
@@ -168,5 +175,7 @@
     </div>
     <!-- *********************END FOOTER****************************** -->
     <script src="/script/carosel.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
+
   </body>
 </html>
