--- a/html/contact.html
+++ b/html/contact.html
@@ -44,20 +44,11 @@
       <div class="ContactSECT ContactForm">
         <form>
           <label for="fname">First Name</label>
-          <input
-            type="text"
-            id="fname"
-            name="firstname"
-            placeholder="Your name.."
-          />
+          <input  type="text"    id="fname"    name="firstname"       placeholder="Your name.."  />
 
           <label for="lname">Last Name</label>
-          <input
-            type="text"
-            id="lname"
-            name="lastname"
-            placeholder="Your last name.."
-          />
+          <input            type="text"            id="lname" name="lastname"
+            placeholder="Your last name.."          />
 
           <label for="country">Country</label>
           <select id="country" name="country">
