--- a/html/shop.html
+++ b/html/shop.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <title>Shop</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/mobile.css" />
-    <link rel="stylesheet" href="/css/carosel.css" />
-    <link rel="stylesheet" href="/css/shop.css" />
+    <link rel="stylesheet" href="/css/style.css" >
+    <link rel="stylesheet" href="/css/mobile.css" >
+    <link rel="stylesheet" href="/css/carosel.css" >
+    <link rel="stylesheet" href="/css/shop.css" >
   </head>
   <body class="body">
     <!-- create a logo area in header -->
-    <img src="/img/logo.png" class="logo" alt="image" />
+    <img src="/img/logo.png" class="logo" alt="image" >
     <!-- create a logo area in header -->
     <div id="topnav" class="topnav">
       <a href="/index.html">Home</a>
@@ -47,7 +47,7 @@
       
     <!-- *********************FOOTER********************************* -->
     <div class="footer">
-      <img src="/img/logo.png" class="footer-logo" alt="image" />
+      <img src="/img/logo.png" class="footer-logo" alt="image">
       <div class="footer-content"></div>
     </div>
     <!-- *********************END FOOTER****************************** -->
