--- a/html/contact.html
+++ b/html/contact.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <title>Contact US</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/mobile.css" />
-    <link rel="stylesheet" href="/css/carosel.css" />
-    <link rel="stylesheet" href="/css/contact.css" />
+    <link rel="stylesheet" href="/css/style.css" >
+    <link rel="stylesheet" href="/css/mobile.css">
+    <link rel="stylesheet" href="/css/carosel.css" >
+    <link rel="stylesheet" href="/css/contact.css" >
   </head>
   <body class="body">
     <!-- create a logo area in header -->
-    <img src="/img/logo.png" class="logo" alt="image" />
+    <img src="/img/logo.png" class="logo" alt="image" >
     <!-- create a logo area in header -->
     <div id="topnav" class="topnav">
       <a href="/index.html">Home</a>
