--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <title>Bookshop</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/mobile.css" />
-    <link rel="stylesheet" href="/css/carosel.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0"
-    />
+    <link rel="stylesheet" href="/css/style.css" >
+    <link rel="stylesheet" href="/css/mobile.css" >
+    <link rel="stylesheet" href="/css/carosel.css" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0">
   </head>
   <body class="body">
     <!-- create a logo area in header -->
-    <img src="/img/logo.png" class="logo" alt="image" />
+    <img src="/img/logo.png" class="logo" alt="image" >
     <!-- create a logo area in header -->
     <div id="topnav" class="topnav">
       <a href="/index.html" class="active">   <iconify-icon inline icon="mdi:home"></iconify-icon> Home</a>
@@ -33,19 +30,19 @@
           <div class="sidebarHead">TRENDING BOOKS</div>
           <div class="mySlides">
             <div class="trendBookName">1 / 3</div>
-            <img src="/img/book/hp1.jpg" alt="image" />
+            <img src="/img/book/hp1.jpg" alt="image" >
             <div class="trendBookName">Book 1</div>
           </div>
 
           <div class="mySlides">
             <div class="trendBookName">2 / 3</div>
-            <img src="/img/book/hp2.jpg" alt="image" />
+            <img src="/img/book/hp2.jpg" alt="image" >
             <div class="trendBookName">Book 2</div>
           </div>
 
           <div class="mySlides">
             <div class="trendBookName">3 / 3</div>
-            <img src="/img/book/hp3.jpg" alt="image" />
+            <img src="/img/book/hp3.jpg" alt="image" >
             <div class="trendBookName">Book 3</div>
           </div>
 
@@ -62,27 +59,27 @@
           <tr>
             <td>1</td>
             <td>J. K. Rowling</td>
-            <td><img src="/img/other/up.png " alt="image" /></td>
+            <td><img src="/img/other/up.png " alt="image"  ></td>
           </tr>
           <tr>
             <td>2</td>
             <td>Leo Tolstoy</td>
-            <td><img src="/img/other/same_white.png" alt="image" /></td>
+            <td><img src="/img/other/same_white.png" alt="image" ></td>
           </tr>
           <tr>
             <td>3</td>
             <td>C. S. Lewis</td>
-            <td><img src="/img/other/down.png" alt="image" /></td>
+            <td><img src="/img/other/down.png" alt="image" ></td>
           </tr>
           <tr>
             <td>4</td>
             <td>J. R. R. Tolkien</td>
-            <td><img src="/img/other/up.png" alt="image" /></td>
+            <td><img src="/img/other/up.png" alt="image" ></td>
           </tr>
           <tr>
             <td>5</td>
             <td>George Orwell</td>
-            <td><img src="/img/other/down.png" alt="image" /></td>
+            <td><img src="/img/other/down.png" alt="image" ></td>
           </tr>
         </table>
         <!-- **********************************************END TRENDING AUTHOR**************************************-->
@@ -92,7 +89,7 @@
       <div class="main">
         <!-- +++++++++++++++++++++++++++MAIN OFFER+++++++++++++++++++++++++-->
         <div class="main-offer">
-          <img src="/img/book/christmas_collection.jpg" alt="image" />
+          <img src="/img/book/christmas_collection.jpg" alt="image" >
           <div class="main-offer-text">
             <h4>THIS CHRISTMAS</h4>
             <p>Let your imagination run</p>
@@ -105,7 +102,7 @@
           </div>
          
           <article>
-            <img src="/img/book/hp1.jpg" alt="image" />
+            <img src="/img/book/hp1.jpg" alt="image" >
             <div class="article-content">
               <h2>Microsoft Edge</h2>
               <p>
@@ -116,7 +113,7 @@
           </article>
 
           <article>
-            <img src="/img/book/hp2.jpg" alt="image" />
+            <img src="/img/book/hp2.jpg" alt="image" >
             <div class="article-content">
               <h2>Microsoft Edge</h2>
               <p>
@@ -127,7 +124,7 @@
           </article>
 
           <article>
-            <img src="/img/book/hp3.jpg" alt="image" />
+            <img src="/img/book/hp3.jpg" alt="image" >
             <div class="article-content">
               <h2>Microsoft Edge</h2>
               <p>
@@ -170,7 +167,7 @@
 
     <!-- *********************FOOTER********************************* -->
     <div class="footer">
-      <img src="/img/logo.png" class="footer-logo" alt="image" />
+      <img src="/img/logo.png" class="footer-logo" alt="image" >
       <div class="footer-content"></div>
     </div>
     <!-- *********************END FOOTER****************************** -->
