--- a/html/shop.html
+++ b/html/shop.html
@@ -1,53 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8" />
     <title>Shop</title>
-    <link rel="stylesheet" href="/css/style.css" >
-    <link rel="stylesheet" href="/css/mobile.css" >
-    <link rel="stylesheet" href="/css/carosel.css" >
-    <link rel="stylesheet" href="/css/shop.css" >
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/mobile.css" />
+    <link rel="stylesheet" href="/css/carosel.css" />
+    <link rel="stylesheet" href="/css/shop.css" />
   </head>
   <body class="body">
     <!-- create a logo area in header -->
-    <img src="/img/logo.png" class="logo" alt="image" >
+    <img src="/img/logo.png" class="logo" alt="image" />
     <!-- create a logo area in header -->
     <div id="topnav" class="topnav">
       <a href="/index.html">Home</a>
       <!-- selected nav bar -->
       <a href="/html/shop.html" class="active">Shop</a>
-      <a href="/html/contact.html" >Contact Us</a>
+      <a href="/html/contact.html">Contact Us</a>
       <a href="/html/login.html">Login</a>
       <!-- searchbutton-->
     </div>
+    
 
     <div class="shop-page">
-        <div class="card">
-            <img src="/img/book/hp1.jpg" alt="hp1" style="width:100%">
-            <h1>Tailored Jeans</h1>
-            <p class="price">$19.99</p>
-            <p>Some text about the jeans..</p>
-            <p><button>Add to Cart</button></p>
-          </div> 
-          <div class="card">
-            <img src="/img/book/hp1.jpg" alt="hp1" style="width:100%">
-            <h1>Tailored Jeans</h1>
-            <p class="price">$19.99</p>
-            <p>Some text about the jeans..</p>
-            <p><button>Add to Cart</button></p>
-          </div> 
-          <div class="card">
-            <img src="/img/book/hp1.jpg" alt="hp1" style="width:100%">
-            <h1>Tailored Jeans</h1>
-            <p class="price">$19.99</p>
-            <p>Some text about the jeans..</p>
-            <p><button>Add to Cart</button></p>
-          </div> 
+      <div class="card">
+        <img src="/img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <h1>Tailored Jeans</h1>
+        <span class="og-price">$29.99 </span>
+
+        <p class="price">$19.99</p>
+        <p>Some text about the jeans..</p>
+        <button class="cart">
+          <iconify-icon
+            inline
+            icon="material-symbols:add-shopping-cart"
+          ></iconify-icon>
+          To Cart
+        </button>
+        <button class="buy">
+          <iconify-icon
+            inline
+            icon="material-symbols:shopping-cart-checkout"
+          ></iconify-icon>
+          Buy Now
+        </button>
+      </div>
+      <div class="card">
+        <img src="/img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <h1>Tailored Jeans</h1>
+        <span class="og-price">$29.99 </span>
+        <p class="price">$19.99</p>
+        <p>Some text about the jeans..</p>
+        <button class="cart">
+          <iconify-icon
+            inline
+            icon="material-symbols:add-shopping-cart"
+          ></iconify-icon>
+          To Cart
+        </button>
+        <button class="buy">
+          <iconify-icon
+            inline
+            icon="material-symbols:shopping-cart-checkout"
+          ></iconify-icon>
+          Buy Now
+        </button>
+      </div>
+      <div class="card">
+        <img src="/img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <h1>Tailored Jeans</h1>
+        <span class="og-price">$29.99 </span>
+        <p class="price">$19.99</p>
+        <p>Some text about the jeans..</p>
+        <button class="cart">
+          <iconify-icon
+            inline
+            icon="material-symbols:add-shopping-cart"
+          ></iconify-icon>
+          To Cart
+        </button>
+        <button class="buy">
+          <iconify-icon
+            inline
+            icon="material-symbols:shopping-cart-checkout"
+          ></iconify-icon>
+          Buy Now
+        </button>
+      </div>
+      <div class="card">
+        <img src="/img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <h1>Tailored Jeans</h1>
+        <span class="og-price">$29.99 </span>
+
+        <p class="price">$19.99</p>
+        <p>Some text about the jeans..</p>
+        <button class="cart">
+          <iconify-icon
+            inline
+            icon="material-symbols:add-shopping-cart"
+          ></iconify-icon>
+          To Cart
+        </button>
+        <button class="buy">
+          <iconify-icon
+            inline
+            icon="material-symbols:shopping-cart-checkout"
+          ></iconify-icon>
+          Buy Now
+        </button>
+      </div>
+      <div class="card">
+        <img src="/img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <h1>Tailored Jeans</h1>
+        <span class="og-price">$29.99 </span>
+        <p class="price">$19.99</p>
+        <p>Some text about the jeans..</p>
+        <button class="cart">
+          <iconify-icon
+            inline
+            icon="material-symbols:add-shopping-cart"
+          ></iconify-icon>
+          To Cart
+        </button>
+        <button class="buy">
+          <iconify-icon
+            inline
+            icon="material-symbols:shopping-cart-checkout"
+          ></iconify-icon>
+          Buy Now
+        </button>
+      </div>
+      <div class="card">
+        <img src="/img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <h1>Tailored Jeans</h1>
+        <span class="og-price">$29.99 </span>
+        <p class="price">$19.99</p>
+        <p>Some text about the jeans..</p>
+        <button class="cart">
+          <iconify-icon
+            inline
+            icon="material-symbols:add-shopping-cart"
+          ></iconify-icon>
+          To Cart
+        </button>
+        <button class="buy">
+          <iconify-icon
+            inline
+            icon="material-symbols:shopping-cart-checkout"
+          ></iconify-icon>
+          Buy Now
+        </button>
+      </div>
     </div>
-      
+
     <!-- *********************FOOTER********************************* -->
     <div class="footer">
-      <img src="/img/logo.png" class="footer-logo" alt="image">
+      <img src="/img/logo.png" class="footer-logo" alt="image" />
       <div class="footer-content"></div>
     </div>
     <!-- *********************END FOOTER****************************** -->
