--- a/html/prova/1.html
+++ b/html/prova/1.html
@@ -1,30 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-        <!-- HTML for the carousel container -->
-    <div class="carousel">
-    <!-- HTML for the carousel items -->
-    <div class="carousel-item">
-        <img src="/img/book/hp1.jpg" alt="">
-        <!-- Content for the first carousel item goes here -->
+<html>
+  <title>W3.CSS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    .slider {
+      width: 60%;
+      margin: 0 auto;
+      display: flex;
+    }
+    .slider-books-cont {
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+    }
+    .slider-books {
+      height: 100px;
+      width: 100px;
+    }
+  </style>
+  <body>
+    <div class="slider">
+      <div class="selec-book">
+        <img
+          class="mySlides"
+          src="/img/book/hp1.jpg"
+          style="width: 100%; display: none"
+        />
+        <img class="mySlides" src="/img/book/hp2.jpg" style="width: 100%" />
+        <img
+          class="mySlides"
+          src="/img/book/hp3.jpg"
+          style="width: 100%; display: none"
+        />
+      </div>
+      <div class="slider-books-cont">
+        <div class="slider-books">
+          <img
+            class="opacity"
+            src="/img/book/hp1.jpg"
+            style="width: 100%; cursor: pointer"
+            onclick="currentDiv(1)"
+          />
+        </div>
+        <div class="slider-books">
+          <img
+            class="opacity"
+            src="/img/book/hp2.jpg"
+            style="width: 100%; cursor: pointer"
+            onclick="currentDiv(2)"
+          />
+        </div>
+        <div class="slider-books">
+          <img
+            class="opacity"
+            src="/img/book/hp3.jpg"
+            style="width: 100%; cursor: pointer"
+            onclick="currentDiv(3)"
+          />
+        </div>
+      </div>
     </div>
-    <div class="carousel-item">
-        <img src="/img/book/hp1.jpg" alt="">
-        <!-- Content for the second carousel item goes here -->
-    </div>
-    <div class="carousel-item">
-        <img src="/img/book/hp1.jpg" alt="">
-        <!-- Content for the third carousel item goes here -->
-    </div>
-    <!-- Additional carousel items go here -->
-    </div>
-</body>
-</html>
 
+    <script>
+      function currentDiv(n) {
+        showDivs((slideIndex = n));
+      }
+
+      function showDivs(n) {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        var dots = document.getElementsByClassName("demo");
+        if (n > x.length) {
+          slideIndex = 1;
+        }
+        if (n < 1) {
+          slideIndex = x.length;
+        }
+        for (i = 0; i < x.length; i++) {
+          x[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" opacity-off", "");
+        }
+        x[slideIndex - 1].style.display = "block";
+        dots[slideIndex - 1].className += "opacity-off";
+      }
+    </script>
+  </body>
+</html>
