--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -3,32 +3,32 @@
   <head>
     <meta charset="UTF-8" >
     <title>Contact US</title>
-    <link rel="stylesheet" href="css/style.css" >
-    <link rel="stylesheet" href="css/mobile.css">
-    <link rel="stylesheet" href="css/carosel.css" >
-    <link rel="stylesheet" href="css/contact.css" >
+    <link rel="stylesheet" href="../css/style.css" >
+    <link rel="stylesheet" href="../css/mobile.css">
+    <link rel="stylesheet" href="../css/carosel.css" >
+    <link rel="stylesheet" href="../css/contact.css" >
   </head>
   <body class="body">
      <!-- create a logo area in header -->
-     <img src="img/logo.png" class="logo" alt="image" >
+     <img src="../img/logo.png" class="logo" alt="image" >
      <div id="topnav" class="topnav">
        <a href="index.html" >   <iconify-icon inline icon="mdi:home"></iconify-icon> Home</a>
        <!-- selected nav bar -->
-       <a href="html/shop.html"><iconify-icon inline icon="mdi:shop"></iconify-icon> Shop</a>
-       <a href="html/contact.html" class="active"> <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon
+       <a href="shop.html"><iconify-icon inline icon="mdi:shop"></iconify-icon> Shop</a>
+       <a href="contact.html" class="active"> <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon
          > Contact Us</a>
-       <a href="html/login.html"><iconify-icon inline icon="material-symbols:login"></iconify-icon> Login</a>
+       <a href="login.html"><iconify-icon inline icon="material-symbols:login"></iconify-icon> Login</a>
        <!-- searchbutton-->
      </div>
 
     <div class="contact-page">
-      <!-- <img src="img/other/shop.jpg" class="bannerIMG" alt="shop"> -->
+      <!-- <img src="../img/other/shop.jpg" class="bannerIMG" alt="shop"> -->
 
       <div class="main-section-heading">
         <iconify-icon inline icon="mdi:about"></iconify-icon>About Us
       </div>
       <div class="ContactSECT">
-        <img src="img/other/shop.jpg" alt="Shop" /><br />
+        <img src="../img/other/shop.jpg" alt="Shop" /><br />
 
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
         voluptates, quod, quia, voluptate quae voluptatem quibusdam voluptatum
@@ -147,7 +147,7 @@
 
     <!-- *********************FOOTER********************************* -->
     <div class="footer">
-      <img src="img/logo.png" class="footer-logo" alt="image" />
+      <img src="../img/logo.png" class="footer-logo" alt="image" />
       <div class="footer-content"></div>
     </div>
     <!-- *********************END FOOTER****************************** -->
