--- a/src/html/shop.html
+++ b/src/html/shop.html
@@ -3,27 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <title>Shop</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/mobile.css" />
-    <link rel="stylesheet" href="css/carosel.css" />
-    <link rel="stylesheet" href="css/shop.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/mobile.css" />
+    <link rel="stylesheet" href="../css/carosel.css" />
+    <link rel="stylesheet" href="../css/shop.css" />
   </head>
   <body class="body">
      <!-- create a logo area in header -->
-     <img src="img/logo.png" class="logo" alt="image" >
+     <img src="../img/logo.png" class="logo" alt="image" >
      <div id="topnav" class="topnav">
        <a href="index.html" >   <iconify-icon inline icon="mdi:home"></iconify-icon> Home</a>
        <!-- selected nav bar -->
-       <a href="html/shop.html" class="active"><iconify-icon inline icon="mdi:shop"></iconify-icon> Shop</a>
-       <a href="html/contact.html"> <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon
+       <a href="shop.html" class="active"><iconify-icon inline icon="mdi:shop"></iconify-icon> Shop</a>
+       <a href="contact.html"> <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon
          > Contact Us</a>
-       <a href="html/login.html"><iconify-icon inline icon="material-symbols:login"></iconify-icon> Login</a>
+       <a href="login.html"><iconify-icon inline icon="material-symbols:login"></iconify-icon> Login</a>
        <!-- searchbutton-->
      </div>
     </div>
     <div class="shop-page">
       <div class="card">
-        <img src="img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <img src="../img/book/hp1.jpg" alt="hp1" style="width: 100%" />
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
 
@@ -45,7 +45,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <img src="../img/book/hp1.jpg" alt="hp1" style="width: 100%" />
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -66,7 +66,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <img src="../img/book/hp1.jpg" alt="hp1" style="width: 100%" />
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -87,7 +87,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <img src="../img/book/hp1.jpg" alt="hp1" style="width: 100%" />
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
 
@@ -109,7 +109,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <img src="../img/book/hp1.jpg" alt="hp1" style="width: 100%" />
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -130,7 +130,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <img src="../img/book/hp1.jpg" alt="hp1" style="width: 100%" />
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -154,7 +154,7 @@
 
     <!-- *********************FOOTER********************************* -->
     <div class="footer">
-      <img src="img/logo.png" class="footer-logo" alt="image" />
+      <img src="../img/logo.png" class="footer-logo" alt="image" />
       <div class="footer-content"></div>
     </div>
     <!-- *********************END FOOTER****************************** -->
