--- a/src/html/shop.html
+++ b/src/html/shop.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Shop</title>
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/mobile.css" />
-    <link rel="stylesheet" href="../css/carosel.css" />
-    <link rel="stylesheet" href="../css/shop.css" />
+    <link rel="stylesheet" href="../css/style.css" >
+    <link rel="stylesheet" href="../css/mobile.css">
+    <link rel="stylesheet" href="../css/carosel.css">
+    <link rel="stylesheet" href="../css/shop.css">
   </head>
   <body class="body">
      <!-- create a logo area in header -->
      <img src="../img/logo.png" class="logo" alt="image" >
      <div id="topnav" class="topnav">
-       <a href="index.html" >   <iconify-icon inline icon="mdi:home"></iconify-icon> Home</a>
+       <a href="../index.html" >   <iconify-icon inline icon="mdi:home"></iconify-icon> Home</a>
        <!-- selected nav bar -->
        <a href="shop.html" class="active"><iconify-icon inline icon="mdi:shop"></iconify-icon> Shop</a>
        <a href="contact.html"> <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon
@@ -20,10 +20,10 @@
        <a href="login.html"><iconify-icon inline icon="material-symbols:login"></iconify-icon> Login</a>
        <!-- searchbutton-->
      </div>
-    </div>
+    
     <div class="shop-page">
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <img src="../img/book/hp1.jpg" alt="hp1"  >
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
 
@@ -45,7 +45,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <img src="../img/book/hp1.jpg" alt="hp1">
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -66,7 +66,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <img src="../img/book/hp1.jpg" alt="hp1">
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -87,7 +87,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <img src="../img/book/hp1.jpg" alt="hp1" >
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
 
@@ -109,7 +109,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <img src="../img/book/hp1.jpg" alt="hp1" >
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -130,7 +130,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" style="width: 100%" />
+        <img src="../img/book/hp1.jpg" alt="hp1" >
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -153,10 +153,29 @@
     </div>
 
     <!-- *********************FOOTER********************************* -->
-    <div class="footer">
-      <img src="../img/logo.png" class="footer-logo" alt="image" />
-      <div class="footer-content"></div>
-    </div>
+    <footer>
+      <div class="foot-logo">
+        <img src="/src/img/logo.png" alt="" >
+      </div>
+      <div class="foot-contact">
+        <iconify-icon inline icon="material-symbols:call"></iconify-icon> +34
+        324 324 324 <br >
+        <iconify-icon inline icon="mdi:email"></iconify-icon>
+        info@bookshop.com <br >
+        <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de Lleida,
+        25, 08500 Vic, Barcelona<br >
+
+        <div class="social-media">
+         
+          <iconify-icon icon="mdi:twitter"></iconify-icon>
+          <iconify-icon icon="mdi:facebook"></iconify-icon>
+          <iconify-icon icon="mdi:instagram"></iconify-icon>
+          <a href="http://old.reddit.com"
+            ><iconify-icon icon="mdi:reddit"></iconify-icon
+          ></a>
+        </div>
+      </div>
+    </footer>
     <!-- *********************END FOOTER****************************** -->
 
     <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
