--- a/src/index.html
+++ b/src/index.html
@@ -165,10 +165,29 @@
     <!-- ************************END CONTENT************************ -->
 
     <!-- *********************FOOTER********************************* -->
-    <div class="footer">
-      <img src="img/logo.png" class="footer-logo" alt="image" >
-      <div class="footer-content"></div>
-    </div>
+    <footer>
+      <div class="foot-logo">
+        <img src="/src/img/logo.png" alt="" >
+      </div>
+      <div class="foot-contact">
+        <iconify-icon inline icon="material-symbols:call"></iconify-icon> +34
+        324 324 324 <br >
+        <iconify-icon inline icon="mdi:email"></iconify-icon>
+        info@bookshop.com <br >
+        <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de Lleida,
+        25, 08500 Vic, Barcelona<br >
+
+        <div class="social-media">
+         
+          <iconify-icon icon="mdi:twitter"></iconify-icon>
+          <iconify-icon icon="mdi:facebook"></iconify-icon>
+          <iconify-icon icon="mdi:instagram"></iconify-icon>
+          <a href="http://old.reddit.com"
+            ><iconify-icon icon="mdi:reddit"></iconify-icon
+          ></a>
+        </div>
+      </div>
+    </footer>
     <!-- *********************END FOOTER****************************** -->
     <script src="js/carosel.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
