--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -12,7 +12,7 @@
      <!-- create a logo area in header -->
      <img src="../img/logo.png" class="logo" alt="image" >
      <div id="topnav" class="topnav">
-       <a href="index.html" >   <iconify-icon inline icon="mdi:home"></iconify-icon> Home</a>
+       <a href="../index.html" >   <iconify-icon inline icon="mdi:home"></iconify-icon> Home</a>
        <!-- selected nav bar -->
        <a href="shop.html"><iconify-icon inline icon="mdi:shop"></iconify-icon> Shop</a>
        <a href="contact.html" class="active"> <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon
@@ -28,7 +28,7 @@
         <iconify-icon inline icon="mdi:about"></iconify-icon>About Us
       </div>
       <div class="ContactSECT">
-        <img src="../img/other/shop.jpg" alt="Shop" /><br />
+        <img src="../img/other/shop.jpg" alt="Shop" ><br >
 
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
         voluptates, quod, quia, voluptate quae voluptatem quibusdam voluptatum
@@ -44,11 +44,11 @@
       <div class="ContactSECT ContactForm">
         <form>
           <label for="fname">First Name</label>
-          <input  type="text"    id="fname"    name="firstname"       placeholder="Your name.."  />
+          <input  type="text"    id="fname"    name="firstname"       placeholder="Your name.."  >
 
           <label for="lname">Last Name</label>
           <input            type="text"            id="lname" name="lastname"
-            placeholder="Your last name.."          />
+            placeholder="Your last name.."  >
 
           <label for="country">Country</label>
           <select id="country" name="country">
@@ -67,15 +67,15 @@
             style="height: 200px"
           ></textarea>
 
-          <input type="submit" value="Submit" />
+          <input type="submit" value="Submit">
         </form>
         <div class="contactInfo">
           <iconify-icon inline icon="material-symbols:call"></iconify-icon> +34
-          324 324 324 <br />
+          324 324 324 <br >
           <iconify-icon inline icon="mdi:email"></iconify-icon>
-          info@bookshop.com <br />
+          info@bookshop.com <br >
           <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de Lleida,
-          25, 08500 Vic, Barcelona<br />
+          25, 08500 Vic, Barcelona<br>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5287.5175996663875!2d2.27509498511035!3d41.94618966276908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcc2ce5db89d5f992!2sGLA%20SL!5e0!3m2!1sen!2ses!4v1671710875691!5m2!1sen!2ses"
             allowfullscreen=""
@@ -83,7 +83,7 @@
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
           <div class="social-media">
-            Follow US <br />
+            Follow US <br>
             <iconify-icon icon="mdi:twitter"></iconify-icon>
             <iconify-icon icon="mdi:facebook"></iconify-icon>
             <iconify-icon icon="mdi:instagram"></iconify-icon>
@@ -100,7 +100,7 @@
 
       <div class="faq">
         <div class="tab">
-          <input type="checkbox" id="chck1" />
+          <input type="checkbox" id="chck1">
           <label class="tab-label" for="chck1">Item 1</label>
           <div class="tab-content">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum,
@@ -108,35 +108,35 @@
           </div>
         </div>
         <div class="tab">
-          <input type="checkbox" id="chck2" />
+          <input type="checkbox" id="chck2">
           <label class="tab-label" for="chck2">Item 2</label>
           <div class="tab-content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
           </div>
         </div>
         <div class="tab">
-          <input type="checkbox" id="chck3" />
+          <input type="checkbox" id="chck3" >
           <label class="tab-label" for="chck3">Item 3</label>
           <div class="tab-content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
           </div>
         </div>
         <div class="tab">
-          <input type="checkbox" id="chck4" />
+          <input type="checkbox" id="chck4" >
           <label class="tab-label" for="chck4">Item 4</label>
           <div class="tab-content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
           </div>
         </div>
         <div class="tab">
-          <input type="checkbox" id="chck5" />
+          <input type="checkbox" id="chck5" >
           <label class="tab-label" for="chck5">Item 5</label>
           <div class="tab-content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
           </div>
         </div>
         <div class="tab">
-          <input type="checkbox" id="chck6" />
+          <input type="checkbox" id="chck6" >
           <label class="tab-label" for="chck6">Item 6</label>
           <div class="tab-content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
@@ -146,10 +146,29 @@
     </div>
 
     <!-- *********************FOOTER********************************* -->
-    <div class="footer">
-      <img src="../img/logo.png" class="footer-logo" alt="image" />
-      <div class="footer-content"></div>
-    </div>
+    <footer>
+      <div class="foot-logo">
+        <img src="/src/img/logo.png" alt="" >
+      </div>
+      <div class="foot-contact">
+        <iconify-icon inline icon="material-symbols:call"></iconify-icon> +34
+        324 324 324 <br >
+        <iconify-icon inline icon="mdi:email"></iconify-icon>
+        info@bookshop.com <br >
+        <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de Lleida,
+        25, 08500 Vic, Barcelona<br >
+
+        <div class="social-media">
+         
+          <iconify-icon icon="mdi:twitter"></iconify-icon>
+          <iconify-icon icon="mdi:facebook"></iconify-icon>
+          <iconify-icon icon="mdi:instagram"></iconify-icon>
+          <a href="http://old.reddit.com"
+            ><iconify-icon icon="mdi:reddit"></iconify-icon
+          ></a>
+        </div>
+      </div>
+    </footer>
     <!-- *********************END FOOTER****************************** -->
 
     <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
