--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8" >
     <title>Bookshop</title>
+    <meta name="author" content="Gurjant Singh">
+    <meta name="description" content="Bookshop">
+    <meta name="keywords" content="Bookshop"> 
+
+
     <link rel="stylesheet" href="css/style.css" >
     <link rel="stylesheet" href="css/mobile.css" >
-    <link rel="stylesheet" href="css/carosel.css" >
-  
+    <link rel="stylesheet" href="css/carosel.css" >  
+    <!-- scripts are on the bottom of the page  -->
+    
   </head>
   <body class="body">
     <!-- create a logo area in header -->
     <img src="img/logo.png" class="logo" alt="image" >
-    <div id="topnav" class="topnav">
+    <div  class="topnav">
       <a href="index.html" class="active">   <iconify-icon inline icon="mdi:home"></iconify-icon> Home</a>
       <!-- selected nav bar -->
       <a href="html/shop.html"><iconify-icon inline icon="mdi:shop"></iconify-icon> Shop</a>
@@ -167,27 +173,29 @@
     <!-- *********************FOOTER********************************* -->
     <footer>
       <div class="foot-logo">
-        <img src="/src/img/logo.png" alt="" >
+        <img src="/src/img/logo.png" alt="">
       </div>
       <div class="foot-contact">
         <iconify-icon inline icon="material-symbols:call"></iconify-icon> +34
-        324 324 324 <br >
+        324 324 324 <br>
         <iconify-icon inline icon="mdi:email"></iconify-icon>
-        info@bookshop.com <br >
-        <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de Lleida,
-        25, 08500 Vic, Barcelona<br >
+        info@bookshop.com <br>
+
+        <address>
+          <a href="https://goo.gl/maps/4Z9Z9Z9Z9Z9Z9Z9Z9">
+            <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de
+            Lleida, 25, 08500 Vic, Barcelona</a
+          >
+        </address>
 
         <div class="social-media">
-         
-          <iconify-icon icon="mdi:twitter"></iconify-icon>
-          <iconify-icon icon="mdi:facebook"></iconify-icon>
-          <iconify-icon icon="mdi:instagram"></iconify-icon>
-          <a href="http://old.reddit.com"
-            ><iconify-icon icon="mdi:reddit"></iconify-icon
-          ></a>
+          <a href="http://www.twiiter.com"><iconify-icon icon="mdi:twitter"></iconify-icon></a>
+          <a href="http://www.facebook.com"><iconify-icon icon="mdi:facebook"></iconify-icon></a>
+          <a href="http://www.instagram.com"><iconify-icon icon="mdi:instagram"></iconify-icon></a>
+          <a href="http://old.reddit.com"><iconify-icon icon="mdi:reddit"></iconify-icon></a>
         </div>
       </div>
-    </footer>
+    <!-- <p>All Right Reserves</p> -->
     <!-- *********************END FOOTER****************************** -->
     <script src="js/carosel.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
