--- a/proves/2.html
+++ b/proves/2.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     img {
       width: 100%;
@@ -47,7 +46,7 @@
         <table>
           <tbody>
             <tr>
-              <td><img src="/img/book/hp1.jpg" /></td>
+              <td><img src="../src/img/book/hp1.jpg" /></td>
               <td>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod at
                 cum quidem voluptatibus laborum consequatur numquam sit,
@@ -63,7 +62,7 @@
         <table>
           <tbody>
             <tr>
-              <td><img src="/img/book/hp2.jpg" /></td>
+              <td><img src="../src/img/book/hp2.jpg" /></td>
               <td>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod at
                 cum quidem voluptatibus laborum consequatur numquam sit,
@@ -79,7 +78,7 @@
         <table>
           <tbody>
             <tr>
-              <td><img src="/img/book/hp3.jpg" /></td>
+              <td><img src="../src/img/book/hp3.jpg" /></td>
               <td>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod at
                 cum quidem voluptatibus laborum consequatur numquam sit,
@@ -95,7 +94,7 @@
         <table>
           <tbody>
             <tr>
-              <td><img src="/img/book/hp4.jpg" /></td>
+              <td><img src="../src/img/book/hp4.jpg" /></td>
               <td>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod at
                 cum quidem voluptatibus laborum consequatur numquam sit,
@@ -111,7 +110,7 @@
         <table>
           <tbody>
             <tr>
-              <td><img src="/img/book/hp5.jpg" /></td>
+              <td><img src="../src/img/book/hp5.jpg" /></td>
               <td>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod at
                 cum quidem voluptatibus laborum consequatur numquam sit,
@@ -127,7 +126,7 @@
         <table>
           <tbody>
             <tr>
-              <td><img src="/img/book/hp6.jpg" /></td>
+              <td><img src="../src/img/book/hp6.jpg" /></td>
               <td>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod at
                 cum quidem voluptatibus laborum consequatur numquam sit,
@@ -144,7 +143,7 @@
       <div class="column">
         <img
           class="demo"
-          src="/img/book/hp1.jpg"
+          src="../src/img/book/hp1.jpg"
           onclick="currentSlide(1)"
           alt="The Woods"
         />
@@ -152,7 +151,7 @@
       <div class="column">
         <img
           class="demo"
-          src="/img/book/hp2.jpg"
+          src="../src/img/book/hp2.jpg"
           onclick="currentSlide(2)"
           alt="Cinque Terre"
         />
@@ -160,7 +159,7 @@
       <div class="column">
         <img
           class="demo"
-          src="/img/book/hp3.jpg"
+          src="../src/img/book/hp3.jpg"
           onclick="currentSlide(3)"
           alt="Mountains and fjords"
         />
@@ -168,7 +167,7 @@
       <div class="column">
         <img
           class="demo"
-          src="/img/book/hp4.jpg"
+          src="../src/img/book/hp4.jpg"
           onclick="currentSlide(4)"
           alt="Northern Lights"
         />
@@ -176,7 +175,7 @@
       <div class="column">
         <img
           class="demo"
-          src="/img/book/hp5.jpg"
+          src="../src/img/book/hp5.jpg"
           onclick="currentSlide(5)"
           alt="Nature and sunrise"
         />
@@ -184,7 +183,7 @@
       <div class="column">
         <img
           class="demo"
-          src="/img/book/hp6.jpg"
+          src="../src/img/book/hp6.jpg"
           onclick="currentSlide(6)"
           alt="Snowy Mountains"
         />
