--- a/src/html/shop.html
+++ b/src/html/shop.html
@@ -5,31 +5,33 @@
     <title>Shop</title>
     <meta name="author" content="Gurjant Singh">
     <meta name="description" content="Bookshop">
-    <meta name="keywords" content="Bookshop"> 
+    <meta name="keywords" content="Bookshop">
 
-    <link rel="stylesheet" href="../css/style.css" >
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/mobile.css">
     <link rel="stylesheet" href="../css/carosel.css">
     <link rel="stylesheet" href="../css/shop.css">
 
   </head>
   <body class="body">
-     <!-- create a logo area in header -->
-     <img src="../img/logo.png" class="logo" alt="image" >
-     <div class="topnav">
-       <a href="../index.html" >   <iconify-icon inline icon="mdi:home"></iconify-icon> Home</a>
-       <!-- selected nav bar -->
-       <a href="shop.html" class="active"><iconify-icon inline icon="mdi:shop"></iconify-icon> Shop</a>
-       <a href="contact.html"> <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon
-         > Contact Us</a>
-       <a href="login.html"><iconify-icon inline icon="material-symbols:login"></iconify-icon> Login</a>
-       <!-- searchbutton-->
-     </div>
+    <!-- create a logo area in header -->
+    <img src="../img/logo.png" class="logo" alt="image">
+    <div class="topnav">
+      <a href="../index.html"> <iconify-icon inline icon="mdi:home"></iconify-icon>
+        Home</a>
+      <!-- selected nav bar -->
+      <a href="shop.html" class="active"><iconify-icon inline icon="mdi:shop"></iconify-icon>
+        Shop</a>
+      <a href="contact.html"> <iconify-icon inline
+          icon="ic:outline-contact-support"></iconify-icon> Contact Us</a>
+      <a href="login.html"><iconify-icon inline icon="material-symbols:login"></iconify-icon>
+        Login</a>
+      <!-- searchbutton-->
+    </div>
 
-  
-      
-    <div class="shop-page">
-      <div class="gallery">
+
+    <div class="main-section-heading">Editor's Pick</div>
+    <div class="gallery">
       <div class="main-section-heading">
         <span id="caption"></span>
       </div>
@@ -40,89 +42,101 @@
               <tr>
                 <td><img src="../img/book/hp1.jpg" /></td>
                 <td>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod at
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quod at
                   cum quidem voluptatibus laborum consequatur numquam sit,
-                  repudiandae sequi! Reiciendis sit similique odit odio laboriosam
+                  repudiandae sequi! Reiciendis sit similique odit odio
+                  laboriosam
                   blanditiis quibusdam tempora
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
-  
+
         <div class="slides">
           <table>
             <tbody>
               <tr>
                 <td><img src="../img/book/hp2.jpg" /></td>
                 <td>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod at
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quod at
                   cum quidem voluptatibus laborum consequatur numquam sit,
-                  repudiandae sequi! Reiciendis sit similique odit odio laboriosam
+                  repudiandae sequi! Reiciendis sit similique odit odio
+                  laboriosam
                   blanditiis quibusdam tempora
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
-  
+
         <div class="slides">
           <table>
             <tbody>
               <tr>
                 <td><img src="../img/book/hp3.jpg" /></td>
                 <td>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod at
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quod at
                   cum quidem voluptatibus laborum consequatur numquam sit,
-                  repudiandae sequi! Reiciendis sit similique odit odio laboriosam
+                  repudiandae sequi! Reiciendis sit similique odit odio
+                  laboriosam
                   blanditiis quibusdam tempora
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
-  
+
         <div class="slides">
           <table>
             <tbody>
               <tr>
                 <td><img src="../img/book/hp4.jpg" /></td>
                 <td>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod at
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quod at
                   cum quidem voluptatibus laborum consequatur numquam sit,
-                  repudiandae sequi! Reiciendis sit similique odit odio laboriosam
+                  repudiandae sequi! Reiciendis sit similique odit odio
+                  laboriosam
                   blanditiis quibusdam tempora
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
-  
+
         <div class="slides">
           <table>
             <tbody>
               <tr>
                 <td><img src="../img/book/hp5.jpg" /></td>
                 <td>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod at
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quod at
                   cum quidem voluptatibus laborum consequatur numquam sit,
-                  repudiandae sequi! Reiciendis sit similique odit odio laboriosam
+                  repudiandae sequi! Reiciendis sit similique odit odio
+                  laboriosam
                   blanditiis quibusdam tempora
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
-  
+
         <div class="slides">
           <table>
             <tbody>
               <tr>
                 <td><img src="../img/book/hp6.jpg" /></td>
                 <td>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod at
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quod at
                   cum quidem voluptatibus laborum consequatur numquam sit,
-                  repudiandae sequi! Reiciendis sit similique odit odio laboriosam
+                  repudiandae sequi! Reiciendis sit similique odit odio
+                  laboriosam
                   blanditiis quibusdam tempora
                 </td>
               </tr>
@@ -130,7 +144,7 @@
           </table>
         </div>
       </div>
-  
+
       <div class="row">
         <div class="column">
           <img
@@ -138,7 +152,7 @@
             src="../img/book/hp1.jpg"
             onclick="currentSlide(1)"
             alt="The Woods"
-          />
+            />
         </div>
         <div class="column">
           <img
@@ -146,7 +160,7 @@
             src="../img/book/hp2.jpg"
             onclick="currentSlide(2)"
             alt="Cinque Terre"
-          />
+            />
         </div>
         <div class="column">
           <img
@@ -154,7 +168,7 @@
             src="../img/book/hp3.jpg"
             onclick="currentSlide(3)"
             alt="Mountains and fjords"
-          />
+            />
         </div>
         <div class="column">
           <img
@@ -162,7 +176,7 @@
             src="../img/book/hp4.jpg"
             onclick="currentSlide(4)"
             alt="Northern Lights"
-          />
+            />
         </div>
         <div class="column">
           <img
@@ -170,7 +184,7 @@
             src="../img/book/hp5.jpg"
             onclick="currentSlide(5)"
             alt="Nature and sunrise"
-          />
+            />
         </div>
         <div class="column">
           <img
@@ -178,14 +192,19 @@
             src="../img/book/hp6.jpg"
             onclick="currentSlide(6)"
             alt="Snowy Mountains"
-          />
+            />
         </div>
       </div> <br>
     </div>
-   
-<!-- ------------------------------------------end gallery--------------------------------------- -->
+
+    <!-- ------------------------------------------end gallery--------------------------------------- -->
+
+    <div class="main-section-heading All-books">All Books</div>
+    <div class="shop-cards">
+         
+
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1"  >
+        <img src="../img/book/hp1.jpg" alt="hp1">
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
 
@@ -194,15 +213,13 @@
         <button class="cart">
           <iconify-icon
             inline
-            icon="material-symbols:add-shopping-cart"
-          ></iconify-icon>
+            icon="material-symbols:add-shopping-cart"></iconify-icon>
           To Cart
         </button>
         <button class="buy">
           <iconify-icon
             inline
-            icon="material-symbols:shopping-cart-checkout"
-          ></iconify-icon>
+            icon="material-symbols:shopping-cart-checkout"></iconify-icon>
           Buy Now
         </button>
       </div>
@@ -215,15 +232,13 @@
         <button class="cart">
           <iconify-icon
             inline
-            icon="material-symbols:add-shopping-cart"
-          ></iconify-icon>
+            icon="material-symbols:add-shopping-cart"></iconify-icon>
           To Cart
         </button>
         <button class="buy">
           <iconify-icon
             inline
-            icon="material-symbols:shopping-cart-checkout"
-          ></iconify-icon>
+            icon="material-symbols:shopping-cart-checkout"></iconify-icon>
           Buy Now
         </button>
       </div>
@@ -236,20 +251,18 @@
         <button class="cart">
           <iconify-icon
             inline
-            icon="material-symbols:add-shopping-cart"
-          ></iconify-icon>
+            icon="material-symbols:add-shopping-cart"></iconify-icon>
           To Cart
         </button>
         <button class="buy">
           <iconify-icon
             inline
-            icon="material-symbols:shopping-cart-checkout"
-          ></iconify-icon>
+            icon="material-symbols:shopping-cart-checkout"></iconify-icon>
           Buy Now
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" >
+        <img src="../img/book/hp1.jpg" alt="hp1">
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
 
@@ -258,20 +271,18 @@
         <button class="cart">
           <iconify-icon
             inline
-            icon="material-symbols:add-shopping-cart"
-          ></iconify-icon>
+            icon="material-symbols:add-shopping-cart"></iconify-icon>
           To Cart
         </button>
         <button class="buy">
           <iconify-icon
             inline
-            icon="material-symbols:shopping-cart-checkout"
-          ></iconify-icon>
+            icon="material-symbols:shopping-cart-checkout"></iconify-icon>
           Buy Now
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" >
+        <img src="../img/book/hp1.jpg" alt="hp1">
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -279,20 +290,18 @@
         <button class="cart">
           <iconify-icon
             inline
-            icon="material-symbols:add-shopping-cart"
-          ></iconify-icon>
+            icon="material-symbols:add-shopping-cart"></iconify-icon>
           To Cart
         </button>
         <button class="buy">
           <iconify-icon
             inline
-            icon="material-symbols:shopping-cart-checkout"
-          ></iconify-icon>
+            icon="material-symbols:shopping-cart-checkout"></iconify-icon>
           Buy Now
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" >
+        <img src="../img/book/hp1.jpg" alt="hp1">
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -300,32 +309,34 @@
         <button class="cart">
           <iconify-icon
             inline
-            icon="material-symbols:add-shopping-cart"
-          ></iconify-icon>
+            icon="material-symbols:add-shopping-cart"></iconify-icon>
           To Cart
         </button>
         <button class="buy">
           <iconify-icon
             inline
-            icon="material-symbols:shopping-cart-checkout"
-          ></iconify-icon>
+            icon="material-symbols:shopping-cart-checkout"></iconify-icon>
           Buy Now
         </button>
       </div>
+      </div>
+
     </div>
 
     <!-- *********************FOOTER********************************* -->
     <footer>
       <div class="foot-logo">
-        <img src="/src/img/logo.png" alt="" >
+        <img src="/src/img/logo.png" alt="">
       </div>
       <div class="foot-contact">
         <iconify-icon inline icon="material-symbols:call"></iconify-icon> +34
-        324 324 324 <br >
+        324 324 324 <br>
         <iconify-icon inline icon="mdi:email"></iconify-icon>
-        info@bookshop.com <br >
+        info@bookshop.com <br>
         <address>
-          <a href="https://goo.gl/maps/4Z9Z9Z9Z9Z9Z9Z9Z9"> <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de Lleida, 25, 08500 Vic, Barcelona</a>
+          <a href="https://goo.gl/maps/4Z9Z9Z9Z9Z9Z9Z9Z9"> <iconify-icon inline
+              icon="mdi:home"></iconify-icon> Carrer de Lleida, 25, 08500 Vic,
+            Barcelona</a>
         </address>
 
         <div class="social-media">
@@ -337,7 +348,6 @@
       </div>
     </footer>
     <!-- *********************END FOOTER****************************** -->
-   
     <script>
       let slideIndex = 1;
       showSlides(slideIndex);
@@ -368,7 +378,7 @@
         captionText.innerHTML = dots[slideIndex - 1].alt;
       }
     </script>
-
-    <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
+    <script
+      src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
   </body>
 </html>
